# Monopoly

./: .flake8  .pre-commit-config.yaml  AGENT_IMPLEMENTATION_STATUS.md  CENTER_PANEL_ENHANCEMENT.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  PROJECT_STATUS.md  Players.md  README.md  TESTING_SUMMARY.md  TEST_SUMMARY.md  TOKENIZATION_FIX.md  VISUALIZATION_CHANGES_SUMMARY.md  VISUALIZATION_FIXES.md  VISUALIZATION_IMPROVEMENTS_SUMMARY.md  VISUALIZATION_QUICK_START.md  analyze_aspect_ratios.py  analyze_training.ipynb  demo_ai_visual.py  demo_board_only.py  example_usage.py  player_behaviours.json  pyproject.toml  pytest.ini  renderer.py  requirements.txt  save_full_board.py  setup.py  suppress_warnings.py  test_before_after_comparison.py  test_center_panel.py  test_env_minimal.py  test_example_simple.py  test_quick.py  test_rounds.py  test_screenshot_board.py  (+5 more)
.github/workflows/: ci.yml
agents/: __init__.py  alpha_schedules.py  base_agent.py  heuristics.py  reward_shaper.py
agents/tests/: test_alpha_schedules.py  test_reward_shaper.py
analysis/: visualize_games.py
docs/: BOARD_CONFIGURATION.md  IMPLEMENTATION_COMPLETE.md  TRAINING_GUIDE.md  VISUALIZATION_GUIDE.md  VISUALIZATION_IMPLEMENTATION.md
engine/: __init__.py  actions.py  board.py  board_config.py  cards.py  rules.py  state.py  transitions.py
engine/boards/: stoke_on_trent.json  us_standard.json
engine/tests/: test_board.py  test_board_config.py  test_integration.py  test_operations.py  test_rules.py  test_state.py  test_trades.py  test_transitions.py
examples/: board_configuration_demo.py  demo_env_with_viz.py  demo_visualization.py
models/: __init__.py  tokenizer.py  transformer.py
models/tests/: __init__.py  test_tokenizer.py
training/: __init__.py  evaluator.py  game_recorder.py  multi_agent_trainer.py  ppo_trainer.py  replay_buffer.py
training/tests/: __init__.py  test_evaluator.py  test_replay_buffer.py
visualization/: README.md  __init__.py  animation.py  board_layout.py  colors.py  info_panel.py  player_renderer.py  renderer.py  text_utils.py  tile_renderer.py
visualization/tests/: test_animation.py  test_board_layout.py  test_colors.py
